# -home-hanxinyan-HuaweiCodeCraft2020Hxy

./: CMakeLists.txt  README.md  main.cpp
data/: test_data2.txt
src/: main.cpp
